align-item fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,13 @@
 	display: block;
 }	
 
+.row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
+.row > [class*='col-'] {
+	 display: flex;
+	 flex-direction: column;
+}
